--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
 	color: #333;
 	text-align: center;
 	font-family: "Arial";
-
+	font-size: 16px;
 	margin:0;
 	padding:0;
 
@@ -14,5 +14,10 @@ body {
 	text-align: left;
 	border: 1px solid #DDD;
 	margin: 0 auto;
+
+}
+#containee h1{
+	font-size: 20px;
+
 
 }
